--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,9 @@
 PORT=3000
 AWS_REGION=ap-southeast-2
 COGNITO_REGION=ap-southeast-2
-COGNITO_USER_POOL_ID=
-COGNITO_APP_CLIENT_ID=
-COGNITO_APP_CLIENT_SECRET=
-
-PARAM_API_BASE_URL=
-PARAM_YT_API_BASE=
-PARAM_TMDB_API_BASE=
-PARAM_PIXABAY_API_BASE=
-#Terraform
-SECRET_YT_API_KEY=
-SECRET_TMDB_API_KEY=
-SECRET_TMDB_V4_TOKEN=
-SECRET_PIXABAY_API_KEY=
-SECRET_DB_CREDENTIALS=
+COGNITO_USER_POOL_ID=As2-n12005371
+COGNITO_APP_CLIENT_ID=7afkfltign3mnrk015eqg5recb
+PARAM_API_BASE_URL=/n12005371/A2/API_BASE_URL
+SECRET_DB_CREDENTIALS=n12005371/a2/admin
+// called DB_CREDENTIALS but actually contains the password and username only.
+//example
